# http-server-benchmarks

./: Cargo.toml  bench.sh  cspell.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
crates/bench_custom/: Cargo.toml
crates/bench_custom/src/: main.rs
crates/bench_ntex/: Cargo.toml
crates/bench_ntex/src/: main.rs
crates/custom/: Cargo.toml
crates/custom/src/: main.rs
crates/custom_server/: Cargo.toml
crates/custom_server/src/: main.rs
crates/hyper_server/: Cargo.toml
crates/hyper_server/src/: main.rs
crates/ntex/: Cargo.toml
crates/ntex/src/: main.rs
crates/ntex_server/: Cargo.toml
crates/ntex_server/src/: main.rs
