[workspace]
resolver = "2"
members = ["crates/bench_ntex", "crates/bench_custom"]

[workspace.package]
repository = "https://github.com/oneofthezombies/http-server-benchmarks"
license = "MIT"
edition = "2021"
authors = ["oneofthezombies <hunhoekim@gmail.com>"]

[profile.release]
opt-level = 3
lto = "fat"
