[workspace]
resolver = "2"
members = ["crates/ntex_server", "crates/custom_server", "crates/hyper_server"]

[workspace.package]
repository = "https://github.com/oneofthezombies/http-server-benchmarks"
license = "MIT"
edition = "2021"
authors = ["oneofthezombies <hunhoekim@gmail.com>"]

[profile.release]
opt-level = 3
lto = "fat"
